@@ -4,25 +4,28 @@ Hash: SHA256
 AUX bootled-initd-1 540 SHA256 9ed71f592bca04cb31c41e866b8320548b111abd5647cb178f4bf6e27ae650f3 SHA512 8d45c70a1f7f529dc89c86f848fcb2adb6dceb19be9bba4f2a78ccaa3cd063859f127db9a9655419cc2eba75d4e5b442895213221c53fd2ceae63f3e128be885 WHIRLPOOL f9b0ebc42f9e6082f3d2af857e760c4b4d8a523daea6a6670e1b2d07db8d1f295ea423f346ac03d344919a6df3eba319f434ff9171b5432a38ead53d8c32ef21
 AUX bootled-initd-2 983 SHA256 389955ea0dc0c8eae081d041855963dbab6c28a43bb1abc9ba0000affeb76373 SHA512 2d391d400002e3cf9d49ef4a937f65c0ea824cefc1b3b4cf2b0795ba3889756056684301378dc155184e799d6bf342e6272787a916e818fb358fe10a3b57f967 WHIRLPOOL 7fe5e890f4daaa23b6a71900e35769560a25af59f4c1c8de4a329a728791e4a940f84aae9c465b58067a94af297d9e9928ceadf1063756539802d589c98ec916
 AUX copynetsetup-initd-1 773 SHA256 0b932fca9a6447a733e5adb37494cb0caab1ee010fe776b76c3945150838ddfe SHA512 c1f5a3c99d623da64b99e17c7d4fcf3a08bda0785bf7bfe65b3635675ece76e486ae63133177560e3af68d973c33eae3ea1b4d7ebaeb47dac7ac1dd9a0c3ef0e WHIRLPOOL 4e25acdf8b197d76e58b3907f77a5365757030851181227595afa93f1d378d62a43715278ce8570f2f90c36de4e649f3d2b5478828efaea2a0cea5dd394f3df0
+AUX install_on_sda.sh-1 2161 SHA256 a3c6e9679685da81c3efdaafaa613afdde338ea1e05802ad99b600b5a322bb05 SHA512 71e3c46f8c38ac4d38122559f8c006522aa971dc700fe2fc3353ffd0374eeaf88387e442144811cf820ca1be1fc6c821189a4812b7ba94552f13784ff67de2b8 WHIRLPOOL 724a3fd3833bd49351ab4045e8e6b81d6d46b9c505edeff60047a568b8a78bd4907649e7bdf4e6b648daf584e7434d1ec4ecddc332d007b875f1cedb1ecdc5f0
+AUX install_on_sda_gpt.sh-1 2153 SHA256 425cfb18b6588d8c544ae0d8cafcee465ed71efebf1a4ca98fb3f2ec70b75ca7 SHA512 c590c4f4320d3c0a81ba067bc6b65953880fcab3e1906784671442df0d828d465ac3a080a657741f04af142c3ba17103ae2a1e888b7ccc7bab9e82c4a6baf5f0 WHIRLPOOL 9336b14ffff5324dc333a49ae99ecf2f03d27d95851a4d7a51814e3e1159fb8062139dae37e88562bfa5f1ee49c123f77b448f254425770e8a88790e758949d1
 AUX marvell-tso-udev-1 222 SHA256 6ed5ef22ebcfd90bc2c2187f429516b6b8c6d26108b531629a3341ce48addfae SHA512 e0acb1308c3f25afe5e9e709ccc04a0fd33c38f12ac3ca6a07a756b56e82ff85d445443bfa01e1d4c1f4b82329418a42831dd83b8ac58f12c235a8f3fb66962a WHIRLPOOL b5f5cf0667d957db37fcb53642a811c87d9ef5414a320f367170933d715b3724442237e65b07762056167766d84c4f4497c1e67f7131b6c4bd5d630974523fdb
 AUX poweroff-b3-1 273 SHA256 af83927b32add243ef00d03bef81058f7466b969fdd08c3cab76469c66768cdd SHA512 166a7491f4707e1ec3fa9e5f9e8c3deb49c531e4e10e5d33eeb84665e4b8b0bfb1f550574e8f07e73173ba3ce7aafcc73916f0aa0272ccfd381e7f5d2fb11a2c WHIRLPOOL 08bc46fd7bfdadb84cffb7c2a8ecf569eb21438af976a2c8a10c5e06df1dce2e8096f97567c4e0d5c058459fb92d236b7d1b3bfce30e78bcb8ca8e97a20981ba
 EBUILD b3-init-scripts-1.0.4.ebuild 946 SHA256 011124c7c86c1b9d27e61af6daa6eca6e1c54f4c217362101c6cbad9967189ac SHA512 7b38ea8229715413bbdfe39f3245114346af0e7447b001b6a5d55a3c83db1c1d211d41b33ff4904dbc277e8d87547bcbc84d056309164d9d20157dd1980684a1 WHIRLPOOL 878e109da6f81ad9d2730bf559b17114667d13fd004a976768cafec6d00b717c119c74c46ad0afef4166174f20f02db07d756055c4e6047f85a4878af0530fe3
-MISC ChangeLog 1020 SHA256 f322e72eab170c8b94c24dcde8fc4f7bb9205981efe39ce184c7df98fbeb9a8d SHA512 f140607ec9e7efa17a78122d7726f2bfcea7a45c163f4fe5bb1439d743ef2f6aaeacdafd6545fca1f0af66436d527f83a1573539441ce114759d3c2f95f5f9e6 WHIRLPOOL 5cb6ac5a2053275f91b1c80ea079014514fbbe7be4a9367b577faf4d3c1ed12dbc9f24db78237532d64a9ccce9dadb590e6339d11977176f1f9490a19663269e
+EBUILD b3-init-scripts-1.0.5.ebuild 1723 SHA256 b4378a73714f8fd19185694941f25b9f86d562f8180dff298accfdd24b766f69 SHA512 09001ac1cb022a5d411ad938f986b49c20bc3b94a472b6e434ea0293a9a1ee378c1265ad832c614d13ad9d47713eca0dd5c80f02ff8b5531a879c7ab06096738 WHIRLPOOL 92466b60d563eebabaec5c31ac038d0062bc95098ce93b1b3ea7f4cf283f53f6de630b09e14812a934f3af912e7fdc775ea15865bbc7dd86fd542519e97b7294
+MISC ChangeLog 1221 SHA256 6ae062b5e2766fbb40e0a4b10a5f8b463c77228b90247d606a707e0d57c42634 SHA512 89609723f03663a638a93ba6ceb6aef0dae1abd336e79dbe1d60880c53ff4c9e0acae2c734e27c1ad17af86273f415f94f42d8cae015a2b995e657eec7c68ddc WHIRLPOOL b4582510c3608f02666e3a87a4a8df05fe807834f0a604297ca1116c5cd859a9f904fafd75fe9713c8f7f2c2589721604bba54dc77e6bd2c9deafc95bc2ddffd
 MISC metadata.xml 617 SHA256 c4526e3fb19b3a6d16064ca831432bc3ad172c2903951b19b3ac88b042555e1e SHA512 23c7b366d54b3174a3de4b033c15668aca5bfb2322050aea388aec09f4d234b37766accd16d473670721453c9eda3ce918fdc8e646de3e643fb2e597e1caea3c WHIRLPOOL 34148bd254c5ca25d0a33c20f9609beb834c4b6514cc445413522645a81c087da32aff08a340bae9bcdc50ac643ba91724df618836d255f8138a698d212774d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJV9vmiAAoJEDHIDbLd52zqmmMP/196nymu7BgncJ1IBZqcpWY6
-Kf3u1RFG2rgin28DcR0Fi/mpGTmv5cYnQl1en4mOlglQQd7Slkg1Rk6wokgXL3Jw
-QgXWaKjdZtS8r2GvKqZ/ti/aufto8wQ7Dh1wc54Ha6C5QsLtAsDJbkPUYA5m3SwL
-E/M5thJ9gImC1DttZimDkdU5i2Te09Hzrwgi0yLSv8yzz3PbAjz7tht42wfbjlEX
-Lwt3Y0vS2bU5OkbpxQjcOJ4P0DB9cYDYkSeNnm1chnhF5bVuAKjTWsoRu7Rw3RZS
-XCgdqTpCmCaE9FRjQ6bIjDFvs60fTksua+l8OH7u8nk0lPAWZp+ke++2wc3goPuB
-n8wET8wxbiLP/Ycz+LeeK7lAbxdbA3yf2x+saAb2eztUMuLiQu96qvOjDJs6aCTk
-BrIJqsxUW/cWv3AG1jonLN6KDPFDBYSHOaXiaow28bxUmk13oslfIkXPMcI/Phl9
-v6zCx17pmnez8rpRbbkg6Y7ru4ruLXMEk8PUjpGcj+Zy3f7Ap21hf1Nz9PIvWAZr
-ZzhiGd4i5aN9CqIxTA7wJowq4jbipmLjQA4HInhVq+M9QHqe6N5YhovPaZhyMi6B
-CoK5SCuGjbST3r9ZygtqTz07O2P/JDVrd1+M+MyCtujMY9UjwVCAXT+mI/APz8k8
-f3kLAfwCkjbSOLNn4IK8
-=gDZO
+iQIcBAEBCAAGBQJWNmIZAAoJEDHIDbLd52zqC3wP/2IcQ4aVmLQzI0ByXTrjuPbY
+A/q+Ns0UPIq0inUpxgXcrNyZr5kRvmu2ujnNYdg3OsYx1d/3hrEOQ3wkuIRzY6uW
+RwBgq9hU5lcmm35UvSY/DiLK2W9l8JZbVGrEo4OZszZdM8qB5Y4xCb72/UfZ7v8Y
+K8Qe62+c4UbZ6oJLyLm47P1LIUxd2PM/zanl78dqYZ3+Hqw4TaedD99MkANdAFdi
+zIhQy0mLcnfHDVoooE+ceLgj0wwz+2livQC1IECOcziykR+vYDV1uG1QaOUXccHu
+irK11w0a7Vhrf+fvq2dPY5mmdbArFhF0hpwJ2eleqkJAd0VosTDIpMViHRoRXgqu
+4xjABKIrS673Omy8k3ct6zeHEqCmQ1rjVlvmEmJT9Eg/c2mvjWJCrvNcJzbCDSDD
+ZihkBkvxxWVe6Vy3bMbrLHIws7SoKr7Y+JY6lZAqHibdRFU5u99WIbFuAAoUM8IY
+bvZ9rvav7Pi5Md9uZ6VgMtGzCzeQjg6v5hDYCcVaY6qpNUm1oZ9kyfokT7rto5OK
+Pa3xx7MKbNC+37Tex7gnlKAi45VZx2pLlXcRdH+jiRosv8T8EzSi168vZxn8rStV
+1e4jjrzKr3CAv1XTvM8EDQbsVWjo8anEZDfveRgD6dTkAz5R1emOtkctQ+95u/G9
+SNuI5FJB5f/F5VUgCCbj
+=ODdb
 -----END PGP SIGNATURE-----
