@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*b3-init-scripts-1.0.5 (01 Nov 2015)
+
+  01 Nov 2015; sakaki <sakaki@deciban.com> +b3-init-scripts-1.0.5.ebuild,
+  +files/install_on_sda.sh-1, +files/install_on_sda_gpt.sh-1:
+  Add sda install scripts
+
 *b3-init-scripts-1.0.4 (14 Sep 2015)
 
   14 Sep 2015; sakaki <sakaki@deciban.com> -b3-init-scripts-1.0.0.ebuild,
